--- a/style.css
+++ b/style.css
@@ -60,6 +60,61 @@
     font-weight: 700;
     margin-top: 8px;
 }
-.water-img{
+
+.water-img {
+    display: block;
+    margin: 0 auto;
+    width: 800px;
+    height: 500px;
+}
+
+.banner-img-2 {
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('images/Vectorrr.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 16px;
+    width: 1100px;
+    height: 500px;
     align-items: center;
+    margin-top: 70px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.banner-img-2{
+    margin-top: 100px;
+}
+.banner-content-2 {
+    width: 660px;
+    padding-top: 50px;
+    padding-left: 105px;
+}
+
+.tittle {
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 78px;
+    letter-spacing: 6.04px;
+    margin-bottom: 0;
+}
+
+.tittle-p {
+    color: #FFFFFFCC;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+}
+
+.btn {
+    color: #FFF;
+    text-align: left;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 35px;
+    padding-left: 35px;
 }
