--- a/style.css
+++ b/style.css
@@ -81,9 +81,10 @@
     margin-right: auto;
 }
 
-.banner-img-2{
+.banner-img-2 {
     margin-top: 100px;
 }
+
 .banner-content-2 {
     width: 660px;
     padding-top: 50px;
@@ -112,9 +113,90 @@
     color: #FFF;
     text-align: left;
     font-family: Inter;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 700;
     text-transform: uppercase;
     margin-top: 35px;
     padding-left: 35px;
+}
+
+.gradient-section {
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    border-radius: 16px;
+    width: 1100px;
+    height: 400px;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gs-content {
+    text-align: center;
+    padding-top: 60px;
+}
+
+.h3-p {
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 22px;
+    text-transform: capitalize;
+}
+.sp{
+    color: #F00;
+}
+.btn-2{
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 0;
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 30px;
+}
+
+.another-section{
+
+}
+.as-1{
+    width: 400px;
+}
+.as-h3{
+    color: #F00;
+    text-align: left;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.as-h2{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    margin-top: 15px;
+    margin-bottom: 0;
+}
+.as-p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 15px;
+}
+
+.as-2-img{
+    display: block;
+    margin: 0 auto;
 }
