--- a/style.css
+++ b/style.css
@@ -144,10 +144,12 @@
     line-height: 22px;
     text-transform: capitalize;
 }
-.sp{
+
+.sp {
     color: #F00;
 }
-.btn-2{
+
+.btn-2 {
     display: inline-flex;
     padding: 16px 32px;
     justify-content: center;
@@ -164,13 +166,19 @@
     margin-top: 30px;
 }
 
-.another-section{
+.another-section {
+    display: flex;
+    width: 1100px;
+    align-items: center;
+    margin: 120px auto 50px auto;
+}
 
-}
-.as-1{
+.as-1 {
     width: 400px;
+    margin-top: 50px;
 }
-.as-h3{
+
+.as-h3 {
     color: #F00;
     text-align: left;
     font-family: Inter;
@@ -178,16 +186,17 @@
     font-weight: 500;
     margin-bottom: 0;
 }
-.as-h2{
+
+.as-h2 {
     color: #070211;
     font-family: Merriweather;
     font-size: 48px;
     font-weight: 900;
-    text-transform: capitalize;
     margin-top: 15px;
     margin-bottom: 0;
 }
-.as-p{
+
+.as-p {
     color: rgba(7, 2, 17, 0.60);
     font-family: Inter;
     font-size: 20px;
@@ -196,7 +205,78 @@
     margin-top: 15px;
 }
 
-.as-2-img{
+.as-2-img {
     display: block;
     margin: 0 auto;
+    width: 300px;
+    height: 300px;
+    padding-top: 21px;
+}
+
+.dot {
+    width: 340px;
+    height: 340px;
+    border-radius: 50%;
+    border: 11px solid #F00;
+    margin: 0 auto;
+}
+
+.as-2 {
+    display: flex;
+}
+
+.as-3 {
+    width: 290px;
+    margin-left: 70px;
+    margin-top: 50px;
+}
+
+.img-as3 {
+    margin-top: 30px;
+}
+
+.as-24 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.last-section {
+    margin: 70px auto 0 auto;
+    width: 1100px;
+}
+
+.l-h3 {
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.l-h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.l-c {
+    color: #F00;
+}
+
+.l-p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: center;
+    margin-top: 15px;
 }
