--- a/style.css
+++ b/style.css
@@ -280,3 +280,255 @@
     text-align: center;
     margin-top: 15px;
 }
+
+.three {
+    width: 1100px;
+    margin: 70px auto 50px auto;
+    position: relative;
+}
+
+.three-pic {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: -107px;
+}
+
+.bedi {
+    width: 400px;
+    height: 433px;
+}
+
+.bedi-logo {
+    position: relative;
+}
+
+
+.logo {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: -145px;
+    bottom: 250px;
+    margin: 0 auto;
+}
+
+.jholmol {
+    position: relative;
+    z-index: 1;
+    margin-right: 82px;
+    margin-left: 45px;
+    margin-top: 15px;
+}
+
+.jholmol-img {
+    width: 680px;
+    height: 600px;
+}
+
+.bar {
+    text-align: center;
+    margin: 0 auto 0 auto;
+    position: relative;
+}
+
+.bar-img {
+    width: 1100px;
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+    top: 430px;
+}
+
+.l-h3 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+.l-h2 {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-align: left;
+}
+
+.l-ap {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.last-ap {
+    margin: 800px auto 30px auto;
+    width: 1100px;
+}
+
+.lip-i {
+    width: 354px;
+    height: 380px;
+    border-radius: 16px;
+    margin: 0px 20px 20px 0px;
+}
+
+.lip {
+    display: flex;
+}
+
+.last-img {
+    width: 1100px;
+    margin: 20px auto 30px auto;
+}
+
+.l-sec {
+    background: rgba(255, 0, 0, 0.05);
+    border-radius: 16px;
+    width: 1100px;
+    height: 600px;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.l-sec-img {
+    width: 150px;
+    height: 150px;
+    margin: 20px auto;
+    padding-top: 80px;
+    padding-left: 480px;
+}
+
+.l-sec-h2 {
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 0;
+}
+
+.l-sec-p {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+.text-btn {
+    margin: 30px auto 30px auto;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 300px;
+}
+
+.tbi {
+    border: 0;
+    background: #FFF;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    padding: 20px 40px;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: left;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    margin-right: 0;
+}
+
+.tbl {
+    border: 0;
+    background: #FF0000;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    padding: 18px 40px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-left: 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    background-color: #070211;
+    margin-top: 90px;
+    height: 500px;
+    width: 100%;
+}
+.fl-call{
+    display: flex;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.fl-web{
+    display: flex;
+    padding-top: 0px;
+    margin-top: 0px;
+}
+#fld{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+.fl-logo{
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
+.fll{
+    width: 64px;
+    height: 64px;
+    margin: 25px 10px 25px 0;
+}
+.fl{
+    width: 1100px;
+    margin: 0 auto;
+}
+.atlast{
+    display: flex;
+}
+.atlast-p{
+    padding-left: 660px;
+}
+.fl-l{
+    display: flex;
+    padding-top: 50px;
+}
+.icon{
+    
+    width: 24px;
+    height: 24px;
+    padding-top: 27PX;
+    padding-right: 10px;
+}
+.icon2{
+    width: 24px;
+    height: 24px;
+    margin-top: -5px;
+    padding-top: -5PX;
+    padding-right: 10px;
+}
+.flp2{
+    padding-left: 380px;
+}
+.flpp{
+    line-height: 45px;
+}
+.flddd{
+    margin-top: -10px;
+    padding-top: -10px;
+}
